--- a/style.css
+++ b/style.css
@@ -58,6 +58,11 @@ h1 {
     padding-left: 5%;
 }
 
+h2 {
+    font-family: var(--font-display);
+    font-size: 2em;
+}
+
 h3 {
     font-family: var(--font-mono);
     font-size: 1em;
@@ -65,8 +70,14 @@ h3 {
     margin-top: 3em;
 }
 
+.body {
+    font-family: var(--font-sans);
+    font-size: 1.5em;
+    text-transform: uppercase;
+}
+
 p {
-    font-family: var(--font-mono);
+    font-family: var(--font-sans);
     font-size: 1em;
     margin: 0;
 }
