--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ html {
     margin-right: 5%;
 }
 
+.home-page {
+    background-color: var(--buff);
+    margin: 2em;
+}
+
 /*
  Typograhpy
 */
@@ -57,7 +62,9 @@ h1 {
 
 h2 {
     font-family: var(--font-display);
-    font-size: 2.25em;
+    font-size: 3em;
+    margin-top: 1em;
+    margin-bottom: 2em;
 }
 
 h3 {
@@ -86,9 +93,9 @@ p {
 
 .link__s {
     font-family: var(--font-sans-200);
-    font-size: 1em;
+    font-size: 1.25em;
     text-transform: uppercase;
-    margin: 1em;
+    margin: 1.25em;
 }
 
 .link__m {
@@ -99,7 +106,7 @@ p {
 
 .link__l {
     font-family: var(--font-sans-200);
-    font-size: 2.5em;
+    font-size: 3.5em;
     text-transform: uppercase;
     line-height: 90%;
     margin-top: .25em;
@@ -110,16 +117,19 @@ p {
 
 .link__xl {
     font-family: var(--font-sans-200);
+    color: var(--buff);
+    background-color: var(--charcoal);
     font-size: 4em;
     text-transform: uppercase;
     line-height: 90%;
-    margin-top: .25em;
-    margin-bottom: .25em;
+    padding: .25em;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 .link__footer {
     font-family: var(--font-sans-200);
-    font-size: 1.5em;
+    font-size: 2.5em;
 }
 
 /*
@@ -154,7 +164,8 @@ margin-bottom: 0;
     display: flex;
     justify-content: flex-end;
     font-family: var(--font-display);
-    font-size: 3em;
+    font-size: 5em;
+    margin-top: 1em;
     margin-bottom: 8px;
 }
 
@@ -166,6 +177,7 @@ margin-bottom: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 3em;
 }
 
 .main-nav__list-flex_wrap {
@@ -191,11 +203,13 @@ margin-bottom: 0;
 .gallery {
     width: 100%;
     display: flex;
+    margin-top: 2em;
+    margin-bottom: 2em;
 
 }
 
 .gallery__img {
-    height: 200px;
+    height: 300px;
     padding: 3px;
 }
 
@@ -206,6 +220,8 @@ margin-bottom: 0;
 .work {
     display: flex;
     flex-direction: column;
+    margin: 1em;
+    margin-bottom: 12em;
 }
 
 .work__wrapper {
@@ -214,7 +230,7 @@ margin-bottom: 0;
 
 .work__text-wrapper {
     flex-grow: 1;
-    margin-left: 20px;
+    margin-left: 2em;
 }
 
 .work__text {
@@ -245,9 +261,9 @@ margin-bottom: 0;
 
 .work__img {
     border-radius: 1em;
-    width: 250px;
-    height: 175px;
-    margin: 1em;
+    width: 400px;
+    height: 250px;
+    margin-right: 1em;
     margin-top: 0;
 }
 
@@ -261,6 +277,7 @@ margin-bottom: 0;
     grid-row-gap: 1em;
     grid-column-gap: 1em;
     grid-template-columns: 1fr 1fr 1fr;
+    margin-bottom: 12em;
 }
 
 .featured__img {
@@ -282,6 +299,7 @@ margin-bottom: 0;
     grid-template-columns: 1fr 1fr 1fr;
     grid-row-gap: 1em;
     grid-column-gap: 1em;
+    margin-bottom: 6em;
 }
 
 .playlist__img {
@@ -289,13 +307,51 @@ margin-bottom: 0;
 }
 
 /*
+ Contact Classes
+*/
+
+.contact {
+
+}
+
+.contact__text-wrap {
+  display: grid;
+  width: 290%;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+ .contact {
+    animation-name: scroll;
+    animation-duration: 30s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+
+
+
+@keyframes scroll {
+    from {
+        transform: translateX(0);
+      }
+      to {
+        transform: translateX(calc(-100% - 1rem));
+      }
+    }
+
+
+
+
+/*
  Footer Classes
 */
+
 
 .footer__list {
 display: flex;
 justify-content: space-around;
-margin-top: 4em;
+margin-top: 12em;
+margin-bottom: 8em;
 }
 
 
