--- a/components/index.html
+++ b/components/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../normalize.css">
     <link rel="stylesheet" href="https://use.typekit.net/ygh6zaz.css">
     <title>Shirakaba.studio Design System Study</title>
 </head>
