gallery width updates

--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ margin-bottom: 0;
     display: flex;
     margin-top: 2em;
     margin-bottom: 2em;
+    overflow: hidden;
 
 }
 
@@ -305,41 +306,6 @@ margin-bottom: 0;
 .playlist__img {
     width: 100%;
 }
-
-/*
- Contact Classes
-*/
-
-.contact {
-
-}
-
-.contact__text-wrap {
-  display: grid;
-  width: 290%;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
- .contact {
-    animation-name: scroll;
-    animation-duration: 30s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-}
-
-
-
-
-@keyframes scroll {
-    from {
-        transform: translateX(0);
-      }
-      to {
-        transform: translateX(calc(-100% - 1rem));
-      }
-    }
-
-
 
 
 /*
